fixes tabs for config fiile template

--- a/config.json.template
+++ b/config.json.template
@@ -1,12 +1,14 @@
 {
-    "oar": [{
-        "location": "default",
-        "hostname": "localhost",
-        "database": "oar2",
-        "port": 5432,
-        "user": "oarreader",
-        "password": "read"
-    }],
+    "oar": [
+        {
+            "location": "default",
+            "hostname": "localhost",
+            "database": "oar2",
+            "port": 5432,
+            "user": "oarreader",
+            "password": "read"
+        }
+    ],
     "elasticsearch": {
         "hostname": "localhost",
         "port": 9200,
